courses/430_programming-languages/assignment-8/tests/error/error30.nex
{
raspetchatat 3 2;
}
